\name{NEWS}
\title{NEWS file for the TraMineRextras package}

\section{Changes in version 0.5.4 [2018-11-28] (Development version)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item
      \code{seqprecarity()}, \code{seqprecorr()}, and \code{seqprecstart()}: Important
        code cleaning.
      \item
      \code{seqprecarity()}, \code{seqprecorr()}: New argument \code{method} that
        replaces \code{tr.type} to select the type of transition weights.
        Two additional methods have been implemented, namely \code{'RANK'}
        (for rank-based transition weights) and \code{'ONE'} for
        non-weighted transitions. Also new argument \code{stprec} to allow
        specifying rank values to be used by \code{method='RANK'}.
    }
  }

  \subsection{Bug fixes}{
    \itemize{
      \item
      \code{seqsurv()}: levels of spell$states were not ordered conformably with the alphabet of the state sequence object, which caused \code{plot.ststlist.surv} to use wrong colors for the survival curves when \code{per.state=FALSE}.
      \code{seqsplot()}: color synchronization failed when one of the states selected was unobserved in one of the groups.
      \code{plot.stslist.surv()}: new \code{xlab} argument.
    }
  }

}


\section{Changes in version 0.4.3 [2018-08-22]}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item
      \code{seqsplot()} now supports the \code{ncol} argument for controlling the number of columns in the color legend.
      \item
      \code{plot.stslist.surv()}, \code{seqplot.tentrop()}, , \code{seqplot.tentrop.m()}, \code{plot.seqimplic()}, \code{print.seqimplic()}: new argument \code{tick.last} that when set as \code{TRUE} allows to enforce a tick mark at the last position on the time x-axis. Has no effect when the last position is 1 + a multiple of \code{xtstep}. Default is to use the \code{tick.last} attribute of the state sequence object.
      \item