@@ -32,10 +32,8 @@ states.check <- function(seqdata, state.order, state.equiv){
     ### Should check that states in equiv class are contiguous in state.order
     ###  and that they contain at least one element of state.order
 
-    ## What should we do when equiv.class contain both non-comparable and comparable states
-    ## 1. Changing status of comparable in the class to uncomprable
-    ## 2. Changing status of uncomparable in the class to comparable
-    ## 3. Stop with error message
+    ## When equiv.class contain both non-comparable and comparable states
+    ## Changing status of uncomparable in the class to comparable
 
 ### ## When equiv.class include states not in the state order
 ### ## we add in to state.order next to the first valid element of the equiv class
@@ -44,7 +42,8 @@ states.check <- function(seqdata, state.order, state.equiv){
       inoncomp <- which(is.na(match(alphabet(seqdata),unique(state.order))))
       state.noncomp <- alphabet(seqdata)[inoncomp]
       ii.noncomp.equiv <- match(state.noncomp,equiv_al)
-      if(!is.na(ii.noncomp.equiv[1])){
+      ii.noncomp.equiv <- ii.noncomp.equiv[!is.na(ii.noncomp.equiv)]
+      if(length(ii.noncomp.equiv)>0){
         state.noncomp.equiv <- equiv_al[ii.noncomp.equiv]
   ###
         ## In case a non comparable state belongs to an equiv class
@@ -55,12 +54,14 @@ states.check <- function(seqdata, state.order, state.equiv){
             if (state.noncomp.equiv[i] %in% state.equiv[[k]] ){
               ## insert the equiv state next to first state of the class in state.order
               ii <- match(state.equiv[[k]],state.order)
-              state.order.new <- c(state.order[1:ii[1]],state.noncomp.equiv[i])
-              if (length(state.order)>ii[1]) {
-                state.order.new <- c(state.order.new, state.order[(ii[1]+1):length(state.order)])
-              }
-              state.order <- state.order.new
-              break
+              if (!is.na(ii[1])){
+                state.order.new <- c(state.order[1:ii[1]],state.noncomp.equiv[i])
+                if (length(state.order)>ii[1]) {
+                  state.order.new <- c(state.order.new, state.order[(ii[1]+1):length(state.order)])
+                }
+                state.order <- state.order.new
+              } else {} ## only non comparable state in state.equiv[[k]]
+            break ## we have found the corresponding state.equiv
             }
           }
         }
